@@ -1,3 +1,14 @@
+2006-02-08  Michael Stucki  <michael@typo3.org>
+
+	* Added support to index files that contain whitespaces in the path
+	* Cleanup: Removed unused global definitions in modfunc1 script
+
+2005-01-30  Michael Stucki  <michael@typo3.org>
+
+	* Cleanup: Removed the TypoScript property "tableParams" which is not used anymore.
+	* Replaced the function "procesWordsInArray" with its correctly spelled pendant. The old function remains as a wrapper but is going to be removed sooner or later.
+	* Fixed non-working clearing of indexed_search page-hashes when the list of phashes caused an oversized URL
+
 2006-01-18  Michael Stucki  <michael@typo3.org>
 
 	* Fixed bug #1199: htmlspecialchars() called multiple times
